# conversational-infill

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/backend_model_configs/claude/: model_names.json
configs/backend_only_prompts/: backend_model_prompt_template.txt  backend_model_prompt_template_mcp.txt  backend_model_prompt_template_rag.txt
configs/convfill_backend_prompts/: convfill_backend_template_conv.txt  convfill_backend_template_mcp_conv.txt  convfill_backend_template_rag_conv.txt
configs/convfill_frontend_configs/: convfill_gemma3IT_1B_nd.json  convfill_gemma3IT_270M_nd.json  convfill_llama3.2IT_1B_nd.json  convfill_qwen3_0.6B_nd.json  convfill_smollmIT_1.7B_nd.json  convfill_smollmIT_135M_nd.json  convfill_smollmIT_360M_nd.json
configs/demo_mode/: convfill_config.json  convfill_config_mcp.json  convfill_config_rag.json  convfill_full_config.json  convfill_overall_config.json  convfill_simple_config.json
dataset/: StreamingInfillCollator.py  StreamingTurnDatasetContinued.py
dataset_gen/: dataset_preprocess.py
scripts/: data_preprocess.sh  run_web_demo.sh  train_convfill.sh
src/inference/convfill_stack/: run_convfill.py  (+4 more)
src/training/: convfill_pl_module.py  finetune_convfill.py  metrics.py
src/tts/: avspeech_tts  avspeech_tts.swift  piper_tts.py
src/utils/: api_keys.py
training/: README.md
web_demo/backend/: log_writer.py  main.py  run.py  schemas.py  session.py  test_tts_markdown.py  tts_service.py  whisper_service.py
web_demo/frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+22 files in other folders)
