[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convfill"
version = "0.1.0"
description = "ConvFill: Dual model collaboration system pairing a lightweight Talker model with a cloud Reasoner model"
requires-python = ">=3.11,<3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
